--- a/KRAKEN.vcproj
+++ b/KRAKEN.vcproj
@@ -602,11 +602,11 @@
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -622,6 +622,10 @@
 				</File>
 				<File
 					RelativePath=".\Displayable.h"
+					>
+				</File>
+				<File
+					RelativePath=".\GUIConstants.h"
 					>
 				</File>
 				<File
