--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -305,6 +305,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MonteCarlo.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\MouseEventItem.cpp"
 					>
 				</File>
@@ -602,11 +606,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -622,6 +626,10 @@
 				</File>
 				<File
 					RelativePath=".\Displayable.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MonteCarlo.h"
 					>
 				</File>
 				<File
