--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -420,7 +420,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\PlotBySpeciesManager.cpp"
+						RelativePath=".\PlotBySpeciesWithArcsManager.cpp"
 						>
 					</File>
 					<File
@@ -766,7 +766,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\PlotBySpeciesManager.h"
+						RelativePath=".\PlotBySpeciesWithArcsManager.h"
 						>
 					</File>
 					<File
