--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -420,6 +420,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\PlotBySpeciesManager.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\PlotBySpeciesWithArcsManager.cpp"
 						>
 					</File>
@@ -614,11 +618,11 @@
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -763,6 +767,10 @@
 					</File>
 					<File
 						RelativePath=".\PlotByGroupManager.h"
+						>
+					</File>
+					<File
+						RelativePath=".\PlotBySpeciesManager.h"
 						>
 					</File>
 					<File
