--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -328,6 +328,10 @@
 					RelativePath=".\PrintText.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\Statistics.cpp"
+					>
+				</File>
 				<Filter
 					Name="Buttons"
 					>
@@ -626,11 +630,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -696,6 +700,10 @@
 				</File>
 				<File
 					RelativePath=".\PrintText.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Statistics.h"
 					>
 				</File>
 				<Filter
