--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -340,6 +340,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\ButtonGroup.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\ResetButton.cpp"
 						>
 					</File>
@@ -630,11 +634,11 @@
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -875,6 +879,10 @@
 					>
 					<File
 						RelativePath=".\Button.h"
+						>
+					</File>
+					<File
+						RelativePath=".\ButtonGroup.h"
 						>
 					</File>
 					<File
