--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -436,11 +436,11 @@
 						>
 					</File>
 					<File
-						RelativePath=".\PlotBySpeciesManager.cpp"
+						RelativePath=".\SmallMultiplesManager.cpp"
 						>
 					</File>
 					<File
-						RelativePath=".\PlotBySpeciesWithArcsManager.cpp"
+						RelativePath=".\SmallMultiplesWithArcsManager.cpp"
 						>
 					</File>
 					<File
@@ -794,11 +794,11 @@
 						>
 					</File>
 					<File
-						RelativePath=".\PlotBySpeciesManager.h"
+						RelativePath=".\SmallMultiplesManager.h"
 						>
 					</File>
 					<File
-						RelativePath=".\PlotBySpeciesWithArcsManager.h"
+						RelativePath=".\SmallMultiplesWithArcsManager.h"
 						>
 					</File>
 					<File
