--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -333,10 +333,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\SplineCurve.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\Statistics.cpp"
 					>
 				</File>
@@ -474,10 +470,6 @@
 					<Filter
 						Name="Arcs"
 						>
-						<File
-							RelativePath=".\CenteredArc.cpp"
-							>
-						</File>
 						<File
 							RelativePath=".\InteractionArc.cpp"
 							>
@@ -650,11 +642,11 @@
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -727,10 +719,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\SplineCurve.h"
-					>
-				</File>
-				<File
 					RelativePath=".\Statistics.h"
 					>
 				</File>
@@ -757,10 +745,6 @@
 						Name="Arcs"
 						>
 						<File
-							RelativePath=".\CenteredArc.h"
-							>
-						</File>
-						<File
 							RelativePath=".\InteractionArc.h"
 							>
 						</File>
@@ -770,6 +754,10 @@
 						</File>
 						<File
 							RelativePath=".\InterSpeciesArcCollection.h"
+							>
+						</File>
+						<File
+							RelativePath=".\Link.h"
 							>
 						</File>
 						<File
