--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -520,6 +520,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\Cursor.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\Slider.cpp"
 						>
 					</File>
@@ -642,11 +646,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
+				RelativePath="ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<File
-				RelativePath="ui_ms_prod_mainwindow.h"
+				RelativePath=".\GeneratedFiles\ui_ms_prod_mainwindow.h"
 				>
 			</File>
 			<Filter
@@ -727,6 +731,10 @@
 					>
 					<File
 						RelativePath=".\ChangeSlider.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Cursor.h"
 						>
 					</File>
 					<File
