--- a/src/KRAKEN.vcproj
+++ b/src/KRAKEN.vcproj
@@ -325,6 +325,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Object2D.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Picker.cpp"
 					>
 				</File>
@@ -709,6 +713,10 @@
 							Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 						/>
 					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\Object2D.h"
+					>
 				</File>
 				<File
 					RelativePath=".\Pickable.h"
